# MorphSAT

./: README.md  pyproject.toml
docs/: ADVERSARIAL_ROBUSTNESS_RESULTS.md  CODE_REVIEW_TRANSFER_RESULTS.md  COGNITIVE_ARCHITECTURE_TRANSLATION.md  EVIDENCE_FOR_PAPER.md  MORPHSAT_FOR_COGARCH_REVIEWERS.md  PAPER_KIT.md  PRESSURE_GATE_SPEC.md  PROFILE_ROUTE_RECEIPT_PATTERN.md  RECOMPUTATION_GATED_ARCHITECTURE.md  STEVEN_JONES_RECOMMENDATIONS.md  THE_BOUNDARY_PROBLEM.md  TWO_STAGE_GATE_RESULTS.md  V8_1_SELECTIVE_GATE_ASSISTS.md  V8_2_MONITOR_THRESHOLD_TUNING.md  V8_GATE_AUTHORITY_EXPERIMENT.md  VOCABULARY_COGARCH_MAPPING.md  WO-KVCAS-01.md  morphsat_control_diagram.md  morphsat_technical_note.md
morphsat/: __init__.py  classify_embedding.py  commit_gate.py  core.py  correction_echo.py  gate_qubo.py  graph_routing_signal.py  kv_chain_cas.py  memory_qubo.py  pressure_gate.py  receipt.py  receipt_chain.py  receipt_graph.py  recomp_gate.py  shadow_monitor.py  token.py  two_stage_gate.py
tests/: test_core.py  test_correction_echo.py  test_gate_qubo.py  test_graph_routing_signal.py  test_memory_qubo.py  test_receipt_chain.py  test_receipt_graph.py  test_recomp_gate.py  test_shadow_monitor.py  test_spec_propose.py  test_token.py  test_two_stage_gate.py
tools/: analyze_prefix_overlap.py  bench_adversarial_robustness.py  bench_code_review_transfer.py  bench_decay_sensitivity.py  bench_gate_authority.py  bench_gate_authority_v81.py  bench_memory_stress.py  bench_qubo_gate_sensitivity.py  bridge_mamba_test.py  check_compliance.py  model_capability_sweep.py  run_v81_on_pod.py  (+4 more)
(+3 files in other folders)
